--- a/archive.html
+++ b/archive.html
@@ -19,9 +19,9 @@
             </div>
             <div class="collapse navbar-collapse" id="navcol-1">
                 <ul class="nav navbar-nav navbar-right">
-                    <li role="presentation"><a href="/index.html">About </a></li>
-                    <li role="presentation"><a href="/lectures.html">Lectures </a></li>
-                    <li class="active" role="presentation"><a href="/archive.html">Archive </a></li>
+                    <li role="presentation"><a href="../index.html">About </a></li>
+                    <li role="presentation"><a href="../lectures.html">Lectures </a></li>
+                    <li class="active" role="presentation"><a href="../archive.html">Archive </a></li>
                 </ul>
             </div>
         </div>
