--- a/archive.html
+++ b/archive.html
@@ -27,27 +27,14 @@
         </div>
     </nav>
     <div class="container">
-        <header><img src="assets/img/Visualization_of_the_world_wide_web_common_crawl_2012.png" width="250">
+        <header><img class="img-thumbnail img-responsive" src="assets/img/4th-industrial-revolution.jpg" width="500">
             <h4>웹운영 Web Management (D153490) </h4>
             <p class="text-center text-info intro">2017 한국예술종합학교 연극원/무용원 예술경영 예술사&nbsp; </p>
         </header>
         <hr>
         <section class="content">
-            <h2 class="text-uppercase text-left"><span style="text-decoration: underline;">week 1</span> </h2>
-            <h5 class="text-lowercase text-left"><strong>4차 산업혁명과 문화예술</strong> </h5>
-            <p class="text-left">우리가 생각하는 것 이상으로 세상은 빠른 속도로 변하고 있다. 4차 산업혁명이라고 불리는 바로 그 것. 어제 새롭다고 했던 것이 오늘 다른 것으로 대체될 수도 있다. 점차 광범위하게 변하고 있다. 특히 지속적으로 요구되는 것은 ‘디지털 테크놀로지’가 우리의 삶을 새롭게 변화할 것이라는 것이다. 모든영역에서 말이다. 그리고 새로운 변화들이 여러 분야에서 이미 하나 둘 나타나고 있다. 우리는 과연 어떤 준비를 할 수 있을까? 아니
-                그 전에, 도대체 이 변화는 무엇일까?&nbsp; </p>
-            <blockquote>
-                <p>“소수의 승자가 대부분의 보수를 차지하고 나머지 참가자들이 롱테일을 이룬다. 따라서 미래에는 아이디어가 노동과 자본보다 더 희소한, 진정 희소가치 있는 투입 요소가 될 것이며 좋은 아이디어를 제공하는 소수의 사람이 엄청난 보상을 받게 될 것이다.”&nbsp; </p>
-                <footer>[4차 산업혁명의 충격], 134p </footer>
-            </blockquote>
-            <h5 class="text-uppercase text-left"><strong>keynote </strong></h5>
-            <p class="text-justify">1주차_4차 산업혁명과 문화예술 [<a href="DDD">PDF</a>]</p>
-            <h5 class="text-uppercase text-left"><strong>references</strong> </h5>
-            <ul>
-                <li><a href="https://embed.ted.com/talks/lang/ko/kevin_kelly_on_the_next_5_000_days_of_the_web" target="_blank">Kevin Kelly: The next 5,000 days of the web</a> </li>
-                <li><a href="https://www.ted.com/talks/kevin_kelly_how_ai_can_bring_on_a_second_industrial_revolution?language=en">Kevin Kelly: How AI can bring on a second Industrial Revolution </a></li>
-            </ul>
+            <h2 class="text-uppercase text-left">ARCHIVE </h2>
+            <p class="text-left">여기는 학생들의 프로젝트 결과물을 기록하는 공간입니다. (2017년 6월 업데이트 예정) </p>
             <figure></figure>
         </section>
         <section class="content">
