--- a/lectures.html
+++ b/lectures.html
@@ -27,7 +27,7 @@
         </div>
     </nav>
     <div class="container">
-        <header><img src="assets/img/Visualization_of_the_world_wide_web_common_crawl_2012.png" width="250">
+        <header><img class="img-thumbnail img-responsive" src="assets/img/4th-industrial-revolution.jpg" width="500">
             <h4>웹운영 Web Management (D153490) </h4>
             <p class="text-center text-info intro">2017 한국예술종합학교 연극원/무용원 예술경영 예술사&nbsp; </p>
         </header>
@@ -41,13 +41,24 @@
                 <p>“소수의 승자가 대부분의 보수를 차지하고 나머지 참가자들이 롱테일을 이룬다. 따라서 미래에는 아이디어가 노동과 자본보다 더 희소한, 진정 희소가치 있는 투입 요소가 될 것이며 좋은 아이디어를 제공하는 소수의 사람이 엄청난 보상을 받게 될 것이다.”&nbsp; </p>
                 <footer>[4차 산업혁명의 충격], 134p </footer>
             </blockquote>
-            <h5 class="text-uppercase text-left"><strong>keynote </strong></h5>
-            <p class="text-justify">1주차_4차 산업혁명과 문화예술 [<a href="DDD">PDF</a>]</p>
+            <h5 class="text-uppercase text-left"><strong>SLIDES </strong></h5>
+            <p class="text-justify">1주차_4차 산업혁명과 문화예술 [PDF]</p>
             <h5 class="text-uppercase text-left"><strong>references</strong> </h5>
             <ul>
+                <li><a href="https://www.google.com/url?sa=t&amp;rct=j&amp;q=&amp;esrc=s&amp;source=web&amp;cd=1&amp;ved=0ahUKEwjF2uSM8tfSAhWDwbwKHUcsClEQFggbMAA&amp;url=https%3A%2F%2Fai100.stanford.edu%2Fsites%2Fdefault%2Ffiles%2Fai_100_report_0831fnl.pdf&amp;usg=AFQjCNFOgPjrgSObtWdMGxtAsYRJ8XGdVw&amp;sig2=ld5EnqnYb0MsR2xjdbv3ig&amp;cad=rjt">Artificial Intelligence and Life in 2030</a></li>
                 <li><a href="https://embed.ted.com/talks/lang/ko/kevin_kelly_on_the_next_5_000_days_of_the_web" target="_blank">Kevin Kelly: The next 5,000 days of the web</a> </li>
                 <li><a href="https://www.ted.com/talks/kevin_kelly_how_ai_can_bring_on_a_second_industrial_revolution?language=en">Kevin Kelly: How AI can bring on a second Industrial Revolution </a></li>
             </ul>
+            <figure></figure>
+        </section>
+        <section class="content">
+            <h2 class="text-uppercase text-left"><span style="text-decoration: underline;">week 2</span></h2>
+            <h5 class="text-lowercase text-left"><strong>웹의 발전과 현황: WWW에서 HTML5까지</strong> </h5>
+            <p class="text-left">웹의 등장과 발전을 통해 이루어진 다양한 변화들과 최근 중요하게 다뤄지고 있는 HTML5(웹표준 기술)에 대한 기본적인 지식을 이해한다.또한 새로운 예술을 구상하는 단계에서 어떻게 기존과 다른 생각들을 만들 수 있는지 구체적인 방법에 대해 알아보고자 한다. </p>
+            <h5 class="text-uppercase text-left"><strong>SLIDES </strong></h5>
+            <p class="text-justify">2주차_웹의 발전과 현황: WWW에서 HTML5까지 [<a href="https://docs.google.com/presentation/d/1vL8JXRs90Zh16HEqmBV0mV5JBBmWhcbnBVMv6FRAcUw/edit?usp=sharing" target="_blank">SLIDE</a>]</p>
+            <h5 class="text-uppercase text-left"><strong>references</strong> </h5>
+            <ul></ul>
             <figure></figure>
         </section>
         <section class="content">
