--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </nav>
     </div>
     <div class="container">
-        <header><img src="assets/img/Visualization_of_the_world_wide_web_common_crawl_2012.png" width="250">
+        <header><img class="img-thumbnail img-responsive" src="assets/img/4th-industrial-revolution.jpg" width="500">
             <h4>웹운영 Web Management (D153490) </h4>
             <p class="text-center text-info intro">2017 한국예술종합학교 연극원/무용원 예술경영 예술사&nbsp; </p>
         </header>
