--- a/archive.html
+++ b/archive.html
@@ -34,7 +34,7 @@
         <hr>
         <section class="content">
             <h2 class="text-uppercase text-left">ARCHIVE </h2>
-            <p class="text-left">여기는 학생들의 프로젝트 결과물을 기록하는 공간입니다. (2017년 6월 업데이트 예정) </p>
+            <p class="text-left">학생들의 프로젝트 결과물을 기록하는 공간입니다. (2017년 6월 업데이트 예정) </p>
             <figure></figure>
         </section>
         <section class="content">
