--- a/lectures.html
+++ b/lectures.html
@@ -34,7 +34,7 @@
         <hr>
         <section class="content">
             <h2 class="text-uppercase text-left"><span style="text-decoration: underline;">week 1</span> </h2>
-            <h5 class="text-lowercase text-left"><strong>4차 산업혁명과 문화예술</strong> </h5>
+            <h5 class="text-uppercase text-left"><strong>4차 산업혁명과 문화예술</strong> </h5>
             <p class="text-left">우리가 생각하는 것 이상으로 세상은 빠른 속도로 변하고 있다. 4차 산업혁명이라고 불리는 바로 그 것. 어제 새롭다고 했던 것이 오늘 다른 것으로 대체될 수도 있다. 점차 광범위하게 변하고 있다. 특히 지속적으로 요구되는 것은 ‘디지털 테크놀로지’가 우리의 삶을 새롭게 변화할 것이라는 것이다. 모든영역에서 말이다. 그리고 새로운 변화들이 여러 분야에서 이미 하나 둘 나타나고 있다. 우리는 과연 어떤 준비를 할 수 있을까? 아니
                 그 전에, 도대체 이 변화는 무엇일까?&nbsp; </p>
             <blockquote>
@@ -53,7 +53,7 @@
         </section>
         <section class="content">
             <h2 class="text-uppercase text-left"><span style="text-decoration: underline;">week 2</span></h2>
-            <h5 class="text-lowercase text-left"><strong>웹의 발전과 현황: WWW에서 HTML5까지</strong> </h5>
+            <h5 class="text-uppercase text-left"><strong>웹의 발전과 현황: WWW에서 HTML5까지</strong> </h5>
             <p class="text-left">웹의 등장과 발전을 통해 이루어진 다양한 변화들과 최근 중요하게 다뤄지고 있는 HTML5(웹표준 기술)에 대한 기본적인 지식을 이해한다.또한 새로운 예술을 구상하는 단계에서 어떻게 기존과 다른 생각들을 만들 수 있는지 구체적인 방법에 대해 알아보고자 한다. </p>
             <h5 class="text-uppercase text-left"><strong>SLIDES </strong></h5>
             <p class="text-justify">2주차_웹의 발전과 현황: WWW에서 HTML5까지 [<a href="https://docs.google.com/presentation/d/1vL8JXRs90Zh16HEqmBV0mV5JBBmWhcbnBVMv6FRAcUw/edit?usp=sharing" target="_blank">SLIDE</a>]</p>
@@ -73,12 +73,42 @@
             <figure></figure>
         </section>
         <section class="content">
+            <h2 class="text-uppercase text-left"><span style="text-decoration: underline;">week 3</span></h2>
+            <h5 class="text-uppercase text-left">현장 전문가 특강 1: vr/ar 콘텐츠와 웹 (감성놀이터 최석영 대표)</h5>
+            <ul></ul>
             <figure></figure>
         </section>
         <section class="content">
             <figure></figure>
         </section>
         <section class="content">
+            <figure></figure>
+        </section>
+        <section class="content">
+            <figure></figure>
+        </section>
+        <section class="content">
+            <h2 class="text-uppercase text-left"><span style="text-decoration: underline;">week 4</span></h2>
+            <h5 class="text-uppercase text-left"><strong>문화예술과 소셜 미디어 사례</strong> </h5>
+            <p class="text-left">톰 스탠디지는 그의 저서 &lt;Writing in the wall&gt;에서, '소셜 미디어는 새로운 현상이 아니다'라고 이야기 하다. 키케로와 로마 원로들 사이의 소통, 프로파간다 전파 등 인간의 정보 교환은 소셜미디어를 통해 일어났다고 주장한다. 즉, 미디어는 마샬 맥루언의 말처럼 그 자체로서 메시지다. (The medium is message.) 우리는 기존의 소셜미디어 또는 미디어의 역사적 흐름을 짚어보고, 국내/외
+                공공기관 및 예술단체들이 소셜 미디어를 어떤 방식으로 다루고 있으며, 앞으로 새로운 콘텐츠를 만들어 갈 우리는 어떤 기획을 할 수 있을지 생각해보는 시간을 갖도록 한다. </p>
+            <h5 class="text-uppercase text-left"><strong>SLIDES </strong></h5>
+            <p class="text-justify">4주차_문화예술과 소셜 미디어 사례 [<a href="https://drive.google.com/open?id=1Qq4BE56hgB-OmpuixxnZl91gJe6m7oyH90WbB5OAg6o" target="_blank">SLIDE</a>]</p>
+            <h5 class="text-uppercase text-left"><strong>references</strong> </h5>
+            <ul>
+                <li><a href="http://www.kyobobook.co.kr/product/detailViewKor.laf?ejkGb=KOR&amp;mallGb=KOR&amp;barcode=9788932917283&amp;orderClick=LAG&amp;Kc=" target="_blank">[Book] 소셜 미디어 2000년 파피루스에서 페이스북까지 (필독 권함)</a></li>
+                <li><a href="http://lib.karts.ac.kr/search/tot/result?st=KWRD&amp;si=TOTAL&amp;q=%EC%9D%B4%ED%98%9C%EC%9B%90+%EC%86%8C%EC%85%9C%EB%AF%B8%EB%94%94%EC%96%B4&amp;x=0&amp;y=0" target="_blank">[Paper] 문화예술단체 소셜미디어 활용사례 분석 (이혜원)</a></li>
+                <li><a href="http://www.kyobobook.co.kr/product/detailViewKor.laf?ejkGb=KOR&amp;mallGb=KOR&amp;barcode=9788932917283&amp;orderClick=LAG&amp;Kc=" target="_blank">[Book] 공유와 협력 소셜 미디어 네트워크 패러다임</a> </li>
+                <li><a href="http://www.kyobobook.co.kr/redi_book.jsp?b=9788968664779&amp;g=KOR" target="_blank">[Book] 한 권으로 끝내는 디지털 소셜미디어 마케팅</a> </li>
+                <li><a href="http://lib.karts.ac.kr/search/tot/result?st=KWRD&amp;si=TOTAL&amp;q=%EC%98%A4%ED%98%95%EA%B7%A0#" target="_blank">[Paper] 국내문화예술단체의 SNS 운영성격 사례 및 분석 : 트위터를 중심으로 (오형균)</a></li>
+                <li><a href="https://culturalpolicy.uchicago.edu/sites/culturalpolicy.uchicago.edu/files/peterson1005.pdf" target="_blank">[Paper] CHANGING ARTS AUDIENCES:CAPITALIZING ONOMNIVOROUSNESS (Richard A. Peterson) </a></li>
+                <li><a href="http://www.kcti.re.kr/FileDownloadServlet.dmw?filePath=%2Fwebdata%2Fnewweb%2Freport%2Ffile%2F5de5d78b-ebf0-422a-b34a-8cd5dbfaae6b&amp;fileName=%C6%AF%BA%B02010-06+SNS%BF%CD+%B9%AE%C8%AD%BF%B9%BC%FA+%C3%BC%C7%E8%B9%E6%BD%C4%C0%C7+%BA%AF%C8%AD%28%C0%FC%B9%FC%BC%F6%29.pdf"
+                    target="_blank">[Paper] 소셜 네트워크 서비스(SNS)와 문화예술 체험방식의 변화 </a></li>
+                <li><a href="https://www.fastcompany.com/3068596/the-10-most-innovative-companies-in-social-media-2017">[Article] The 10 Most Innovative Companies In Social Media 2017</a></li>
+                <li><a href="http://lana1.tistory.com/348" target="_blank">[Article] </a><a href="http://aliceon.tistory.com/1974" target="_blank">Social Art : 국내 외 예술가들의 소셜 활용과 분석 _column</a></li>
+                <li><a href="http://lana1.tistory.com/348" target="_blank">[Article] </a><a href="http://www.kyobobook.co.kr/product/detailViewKor.laf?ejkGb=KOR&amp;mallGb=KOR&amp;barcode=9788998453343&amp;orderClick=LIB&amp;Kc=SEBLBkreviewsearch" target="_blank">소셜미디어예술: 소셜 네트워크와 미디어 아트의 실천에 대하여</a>                    </li>
+                <li><a href="http://lana1.tistory.com/348" target="_blank">[Article] 뮤지션의 페이스북 PR의 정석? 월간윤종신!</a> </li>
+            </ul>
             <figure></figure>
         </section>
         <hr>
