--- a/index.html
+++ b/index.html
@@ -47,9 +47,12 @@
         <section class="content">
             <h2 class="text-uppercase text-left"><strong>수업 정보</strong> </h2>
             <figure></figure>
-            <p class="text-left">담당교수: 박승순 (phonicspark@kaist.ac.kr) </p>
+            <p class="text-left">담당교수: 박승순(Seungsoon Park) </p>
+            <p class="text-left">Web: <a href="www.seungsoonpark.com" target="_blank">www.seungsoonpark.com</a></p>
+            <p class="text-left">Mail: phonicspark@kaist.ac.kr</p>
+            <p class="text-left">Phone: 82-10-2036-9381</p>
             <p class="text-left">TA: 미정 </p>
-            <p class="text-left">일정: 수요일 11-13교시 </p>
+            <p class="text-left">일정: 수요일 11-13교시 (19:00-22:00) </p>
             <p class="text-left">강의실: 연극원 영상원(본관),강의실 2(L407)&nbsp; </p>
             <figure></figure>
         </section>
@@ -99,38 +102,38 @@
                         <tr>
                             <td>4 </td>
                             <td>03/22 </td>
-                            <td>문화예술과 소셜미디어 사례 </td>
-                            <td>비고 : 국내 문화예술단체 및 엔터테인먼트 기업에서 소셜 미디어를 다루는 여러가지 사례에 대하여 알아보고자 한다. </td>
+                            <td> 현장 전문가 특강 1: VR/AR 콘텐츠와 웹 </td>
+                            <td>최석영 / 감성놀이터 대표 및 미디어 작가</td>
                         </tr>
                         <tr>
                             <td>5 </td>
                             <td>03/29 </td>
-                            <td>사물인터넷과 문화예술: 창작방식의 변화 </td>
-                            <td>비고 : 사물인터넷의 등장으로 다양한 문화예술 분야의 새로운 창작방식이 개발되고 있다. 이에 대한 주요 사례들을 알아보고자 한다. 참고도서: 사물인터넷 / 프로비스 </td>
+                            <td>문화예술과 소셜미디어 사례 </td>
+                            <td>비고 : 국내 문화예술단체 및 엔터테인먼트 기업에서 소셜 미디어를 다루는 여러가지 사례에 대하여 알아보고자 한다.&nbsp; </td>
                         </tr>
                         <tr>
                             <td>6 </td>
                             <td>04/05 </td>
-                            <td>사물인터넷과 문화예술: 향유방식의 변화 </td>
-                            <td>비고 : 구글 아트 프로젝트 등의 사례를 통해 예술을 웹 상에서 새롭게 감상하는 방식이 주목받고 있다. 이에 대한 주요 사례들을 짚어보도록 한다. 참고도서: 사물인터넷 / 프로비스 </td>
+                            <td>사물인터넷과 문화예술: 창작방식의 변화 </td>
+                            <td>비고 : 사물인터넷의 등장으로 다양한 문화예술 분야의 새로운 창작방식이 개발되고 있다. 이에 대한 주요 사례들을 알아보고자 한다. 참고도서: 사물인터넷 / 프로비스&nbsp; </td>
                         </tr>
                         <tr>
                             <td>7 </td>
                             <td>04/12 </td>
-                            <td>현장 전문가 특강 1: 모바일 방송과 웹 채널 </td>
-                            <td> </td>
+                            <td>사물인터넷과 문화예술: 향유방식의 변화 </td>
+                            <td>비고 : 구글 아트 프로젝트 등의 사례를 통해 예술을 웹 상에서 새롭게 감상하는 방식이 주목받고 있다. 이에 대한 주요 사례들을 짚어보도록 한다. 참고도서: 사물인터넷 / 프로비스&nbsp; </td>
                         </tr>
                         <tr>
                             <td>8 </td>
                             <td>04/19 </td>
-                            <td>현장 전문가 특강 2: 문화예술 기반 웹 서비스 개발 </td>
-                            <td> </td>
+                            <td>현장 전문가 특강 2: 모바일 방송과 웹 채널&nbsp; </td>
+                            <td>김현기 / 와이낫미디어 콘텐츠총괄이사 </td>
                         </tr>
                         <tr>
                             <td>9 </td>
                             <td>04/26 </td>
-                            <td>현장 전문가 특강 3: VR/AR 콘텐츠와 웹 </td>
-                            <td> </td>
+                            <td>현장 전문가 특강 5: 인공지능과 예술 </td>
+                            <td>이종필 / KAIST 문화기술대학원 Music and Audio Computing LAB </td>
                         </tr>
                         <tr>
                             <td>10 </td>
@@ -141,14 +144,14 @@
                         <tr>
                             <td>11 </td>
                             <td>05/10 </td>
-                            <td>현장 전문가 특강 4: 미디어&amp;네트워크 아트 </td>
-                            <td> </td>
+                            <td>현장 전문가 특강 3: 문화예술 기반 웹 서비스 개발 &nbsp; </td>
+                            <td>이준행 / Indiestreet, Booki, Koroke 개발자 </td>
                         </tr>
                         <tr>
                             <td>12 </td>
                             <td>05/17 </td>
-                            <td>현장 전문가 특강 5: 인공지능과 예술 </td>
-                            <td> </td>
+                            <td>현장 전문가 특강 4: 미디어&amp;네트워크 아트 </td>
+                            <td>송준봉 배재혁/ TEAMVOID 미디어 아티스트 그룹 </td>
                         </tr>
                         <tr>
                             <td>13 </td>
