--- a/lectures.html
+++ b/lectures.html
@@ -111,6 +111,21 @@
             </ul>
             <figure></figure>
         </section>
+        <section class="content">
+            <h2 class="text-uppercase text-left"><span style="text-decoration: underline;">week 5</span></h2>
+            <h5 class="text-uppercase text-left"><strong>사물인터넷과 문화예술: 향유방식의 변화</strong> </h5>
+            <p class="text-left">역사적으로 새로운 기술의 등장은 늘 사회 구성원의 생활방식 뿐만 아니라 문화예술을 향유하는 방식에 변화를 가져왔다. 특히 90년대 말까지 음악분야에서는 감상 중심의 음악 향유방식이 대부분이었는데, P2P를 통해 음원을 무한공유하게 될 뿐만 아니라 음악을 창작하는 도구의 가격이 저렴해지면서 음악 감상자들 스스로가 아마추어 또는 준 전문가 급의 창작자로 이동하게 된다. 이러한 변화는 2006년 메이커 운동과도 매우 밀접한 관련이
+                있다. 본 수업을 통해 문화예술의 향유방식 변화에 대해 먼저 알아보도록 한다. </p>
+            <h5 class="text-uppercase text-left"><strong>SLIDES </strong></h5>
+            <p class="text-justify">5주차_사물인터넷과 문화예술: 향유방식의 변화 [<a href="https://docs.google.com/presentation/d/14rg8iUuIxn3RyfeRTVVXA4EuVmPLgVeEWSGP1GgU54A/edit?usp=sharing" target="_blank">SLIDE</a>]</p>
+            <h5 class="text-uppercase text-left"><strong>references</strong> </h5>
+            <ul>
+                <li><a href="http://www.giarts.org/sites/default/files/beyond-attendance-multi-modal-understanding-of-arts-participation%20.pdf" target="_blank">[Paper] Beyond attendance: A multi-modal understanding of arts participation</a></li>
+                <li><a href="http://www.aandbscotland.org.uk/documents/2012-05-28-13-11-39-10-Digital-audiences-for-arts-and-culture-november2010.pdf" target="_blank">[Paper] Digital audiences: Engagement with arts and culture online</a></li>
+                <li><a href="http://www.arko.or.kr/webzine_new/sub1/content_3541.jsp" target="_blank">[Article] 생활예술의 발견</a></li>
+            </ul>
+            <figure></figure>
+        </section>
         <hr>
     </div>
     <script src="assets/js/jquery.min.js"></script>
