--- a/lectures.html
+++ b/lectures.html
@@ -120,9 +120,14 @@
             <p class="text-justify">5주차_사물인터넷과 문화예술: 향유방식의 변화 [<a href="https://docs.google.com/presentation/d/14rg8iUuIxn3RyfeRTVVXA4EuVmPLgVeEWSGP1GgU54A/edit?usp=sharing" target="_blank">SLIDE</a>]</p>
             <h5 class="text-uppercase text-left"><strong>references</strong> </h5>
             <ul>
+                <li><a href="http://www.kyobobook.co.kr/product/detailViewKor.laf?ejkGb=KOR&amp;mallGb=KOR&amp;barcode=9788925550619&amp;orderClick=LAV&amp;Kc=" target="_blank">[Book] 메이커스 새로운 수요를 만드는 사람들</a> </li>
+                <li><a href="http://lib.karts.ac.kr/search/detail/CATTOT000000177481?mainLink=/search/tot&amp;briefLink=/search/tot/result?q=%EB%B0%95%EC%8A%B9%EC%88%9C_A_st=KWRD_A_y=0_A_bk_2=jttjtjttj_A_si=TOTAL_A_x=0">[Paper] 뉴미디어 환경에서의 음악 산업 변화 : 음악창작방식의 변화 사례를 중심으로 (박승순)</a></li>
+                <li><a href="http://www.kyobobook.co.kr/product/detailViewKor.laf?ejkGb=KOR&amp;mallGb=KOR&amp;barcode=9788997544684&amp;orderClick=LAH&amp;Kc=" target="_blank">[Book] 팹랩: 기계, 메이커, 발명가의 제작 공동체 이야기</a></li>
                 <li><a href="http://www.giarts.org/sites/default/files/beyond-attendance-multi-modal-understanding-of-arts-participation%20.pdf" target="_blank">[Paper] Beyond attendance: A multi-modal understanding of arts participation</a></li>
                 <li><a href="http://www.aandbscotland.org.uk/documents/2012-05-28-13-11-39-10-Digital-audiences-for-arts-and-culture-november2010.pdf" target="_blank">[Paper] Digital audiences: Engagement with arts and culture online</a></li>
                 <li><a href="http://www.arko.or.kr/webzine_new/sub1/content_3541.jsp" target="_blank">[Article] 생활예술의 발견</a></li>
+                <li><a href="https://mn.kbs.co.kr/news/view.do?ncd=3454023" target="_blank">[Article] 인조인간 현실화?</a></li>
+                <li><a href="https://www.ted.com/talks/anthony_atala_printing_a_human_kidney#t-995138" target="_blank">[Video] Anthony Atala: Printing a human kidney</a></li>
             </ul>
             <figure></figure>
         </section>
