--- a/lectures.html
+++ b/lectures.html
@@ -122,6 +122,7 @@
             <ul>
                 <li><a href="http://www.kyobobook.co.kr/product/detailViewKor.laf?ejkGb=KOR&amp;mallGb=KOR&amp;barcode=9788925550619&amp;orderClick=LAV&amp;Kc=" target="_blank">[Book] 메이커스 새로운 수요를 만드는 사람들</a> </li>
                 <li><a href="http://lib.karts.ac.kr/search/detail/CATTOT000000177481?mainLink=/search/tot&amp;briefLink=/search/tot/result?q=%EB%B0%95%EC%8A%B9%EC%88%9C_A_st=KWRD_A_y=0_A_bk_2=jttjtjttj_A_si=TOTAL_A_x=0">[Paper] 뉴미디어 환경에서의 음악 산업 변화 : 음악창작방식의 변화 사례를 중심으로 (박승순)</a></li>
+                <li><a href="https://www.slideshare.net/phonicspark/30-28234477/20?utm_source=slideview&amp;utm_medium=ssemail&amp;utm_campaign=first_clip"> [Slide] 음악 3.0 세대 - 요즘밴드 사례를 중심으로 / Social Media Week Seoul</a></li>
                 <li><a href="http://www.kyobobook.co.kr/product/detailViewKor.laf?ejkGb=KOR&amp;mallGb=KOR&amp;barcode=9788997544684&amp;orderClick=LAH&amp;Kc=" target="_blank">[Book] 팹랩: 기계, 메이커, 발명가의 제작 공동체 이야기</a></li>
                 <li><a href="http://www.giarts.org/sites/default/files/beyond-attendance-multi-modal-understanding-of-arts-participation%20.pdf" target="_blank">[Paper] Beyond attendance: A multi-modal understanding of arts participation</a></li>
                 <li><a href="http://www.aandbscotland.org.uk/documents/2012-05-28-13-11-39-10-Digital-audiences-for-arts-and-culture-november2010.pdf" target="_blank">[Paper] Digital audiences: Engagement with arts and culture online</a></li>
