--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <h2 class="text-uppercase text-left"><strong>수업 정보</strong> </h2>
             <figure></figure>
             <p class="text-left">담당교수: 박승순(Seungsoon Park) </p>
-            <p class="text-left">Web: <a href="www.seungsoonpark.com" target="_blank">www.seungsoonpark.com</a></p>
+            <p class="text-left">Web: <a href="http://www.seungsoonpark.com" target="_blank">www.seungsoonpark.com</a></p>
             <p class="text-left">Mail: phonicspark@kaist.ac.kr</p>
             <p class="text-left">Phone: 82-10-2036-9381</p>
             <p class="text-left">TA: 미정 </p>
