--- a/lectures.html
+++ b/lectures.html
@@ -131,6 +131,22 @@
                 <li><a href="https://www.ted.com/talks/anthony_atala_printing_a_human_kidney#t-995138" target="_blank">[Video] Anthony Atala: Printing a human kidney</a></li>
             </ul>
             <figure></figure>
+            <section class="content">
+                <h2 class="text-uppercase text-left"><span style="text-decoration: underline;">week 6</span></h2>
+                <h5 class="text-uppercase text-left"><strong>사물인터넷과 문화예술: 향유방식의 변화</strong> </h5>
+                <p class="text-left">지난 시간, 기술의 발전을 통해 사람들의 예술 향유방식이 변화한 흐름을 짚어보고 그 중에서도 메이커 문화에 대해 알아보았다. 이 과정에서 우리는 '프로페셔널과 아마추어 예술의 차이는 무엇'인지에 대한 질문을 제기할 수 있었다. 따라서 본 수업을 통해 기술의 발전으로 일반인이 적극적으로 예술참여가 가능하기 시작했던 20세기 초부터 어떻게 예술영역의 흐름이 변화해왔는지 이해해보고, 예술가는 무엇을 추구하는 이들이며, 컴퓨터
+                    기술의 발전을 통해 새롭게 등장한 디지털 예술의 영역이 기존 예술과는 어떤 차이가 있고 앞으로 우리는 어떠한 형태의 예술을 기대해볼 수 있는지에 대해 알아보도록 한다. </p>
+                <h5 class="text-uppercase text-left"><strong>SLIDES </strong></h5>
+                <p class="text-justify">6주차_사물인터넷과 문화예술: 창작방식의 변화 [<a href="https://docs.google.com/presentation/d/16KoLjNa1FYWTXIfJyDE5CFu5VO6X4ADoJf0Ge29Tx5o/edit#slide=id.g2067314b5c_0_331" target="_blank">SLIDE</a>]</p>
+                <h5 class="text-uppercase text-left"><strong>references</strong> </h5>
+                <ul>
+                    <li><a href="http://www.kyobobook.co.kr/product/detailViewKor.laf?ejkGb=KOR&amp;mallGb=KOR&amp;barcode=9788966801978&amp;orderClick=LAG&amp;Kc=">[Book] 미디어 아트&nbsp;커뮤니케이션 이해 총서</a></li>
+                    <li><a href="http://www.kyobobook.co.kr/product/detailViewKor.laf?ejkGb=KOR&amp;mallGb=KOR&amp;barcode=9788958622826&amp;orderClick=LAH&amp;Kc=">[Book] 미디어아트: 예술의 최전선&nbsp;UAT 총서 2</a></li>
+                    <li><a href="http://www.kyobobook.co.kr/product/detailViewKor.laf?ejkGb=KOR&amp;mallGb=KOR&amp;barcode=9791130400693&amp;orderClick=LAH&amp;Kc=">[Book] 뉴미디어의 언어</a></li>
+                    <li><a href="http://www.kyobobook.co.kr/product/detailViewKor.laf?ejkGb=KOR&amp;mallGb=KOR&amp;barcode=9791130400686&amp;orderClick=LAH&amp;Kc=">[Book] 소프트웨어가 명령한다</a></li>
+                </ul>
+                <figure></figure>
+            </section>
         </section>
         <hr>
     </div>
