--- a/archive.html
+++ b/archive.html
@@ -20,7 +20,7 @@
             <div class="collapse navbar-collapse" id="navcol-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li role="presentation"><a href="index.html">About </a></li>
-                    <li role="presentation"><a href="lectures.html">Lectures </a></li>
+                    <li role="presentation"><a href="2018_lectures.html">Lectures </a></li>
                     <li class="active" role="presentation"><a href="archive.html">Archive </a></li>
                 </ul>
             </div>
@@ -29,12 +29,22 @@
     <div class="container">
         <header><img class="img-thumbnail img-responsive" src="assets/img/4th-industrial-revolution.jpg" width="500">
             <h4>웹운영 Web Management (D153490) </h4>
-            <p class="text-center text-info intro">2017 한국예술종합학교 연극원/무용원 예술경영 예술사&nbsp; </p>
+            <p class="text-center text-info intro">한국예술종합학교 연극원/무용원 예술경영 예술사&nbsp; </p>
         </header>
         <hr>
         <section class="content">
             <h2 class="text-uppercase text-left">ARCHIVE </h2>
-            <p class="text-left">학생들의 프로젝트 결과물을 기록하는 공간입니다. (2017년 6월 업데이트 예정) </p>
+            <h5 class="text-uppercase text-left">2017 </h5>
+            
+            <p class="text-left"><a href="https://phonicspark.github.io/webmanagement/2017/index.html" target="_blank"> 수업 소개 </a> </p>
+            <p class="text-left"><a href="https://phonicspark.github.io/webmanagement/2017lectures.html" target="_blank"> 강의 자료  </a></p>
+            <p class="text-left"><a href="https://goo.gl/VnRQxG" target="_blank"> 프로젝트 결과물  </a></p>
+            
+            <br>
+
+            <h5 class="text-uppercase text-left">2018 </h5>
+            <p class="text-left"> 2018 7월 업데이트 예정  </a></p>
+
             <figure></figure>
         </section>
         <section class="content">
