--- a/archive.html
+++ b/archive.html
@@ -27,7 +27,7 @@
         </div>
     </nav>
     <div class="container">
-        <header><img class="img-thumbnail img-responsive" src="assets/img/4th-industrial-revolution.jpg" width="500">
+        <header>
             <h4>웹운영 Web Management (D153490) </h4>
             <p class="text-center text-info intro">한국예술종합학교 연극원/무용원 예술경영 예술사&nbsp; </p>
         </header>
@@ -37,8 +37,8 @@
             <h5 class="text-uppercase text-left">2017 </h5>
             
             <p class="text-left"><a href="https://phonicspark.github.io/webmanagement/2017/index.html" target="_blank"> 수업 소개 </a> </p>
-            <p class="text-left"><a href="https://phonicspark.github.io/webmanagement/2017lectures.html" target="_blank"> 강의 자료  </a></p>
-            <p class="text-left"><a href="https://goo.gl/VnRQxG" target="_blank"> 프로젝트 결과물  </a></p>
+            <p class="text-left"><a href="https://phonicspark.github.io/webmanagement/2017/2017_lectures.html" target="_blank"> 강의 자료  </a></p>
+            <p class="text-left"><a href="https://drive.google.com/drive/folders/0Bw6AsClogLOzSFdBTFJ1TFpaYlE?usp=sharing" target="_blank"> 프로젝트 결과물  </a></p>
             
             <br>
 
