--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div class="container">
         <header>
             <h4>웹운영 Web Management (D153490) </h4>
-            <p class="text-center text-info intro">2018 한국예술종합학교 연극원/무용원 예술경영 예술사&nbsp; </p>
+            <p class="text-center text-info intro">한국예술종합학교 연극원/무용원 예술경영 예술사&nbsp; </p>
         </header>
         <hr>
         <section class="content">
