--- a/2018_lectures.html
+++ b/2018_lectures.html
@@ -95,7 +95,7 @@
             <p class="text-left">톰 스탠디지는 그의 저서 &lt;Writing in the wall&gt;에서, '소셜 미디어는 새로운 현상이 아니다'라고 이야기 하다. 키케로와 로마 원로들 사이의 소통, 프로파간다 전파 등 인간의 정보 교환은 소셜미디어를 통해 일어났다고 주장한다. 즉, 미디어는 마샬 맥루언의 말처럼 그 자체로서 메시지다. (The medium is message.) 우리는 기존의 소셜미디어 또는 미디어의 역사적 흐름을 짚어보고, 국내/외
                 공공기관 및 예술단체들이 소셜 미디어를 어떤 방식으로 다루고 있으며, 앞으로 새로운 콘텐츠를 만들어 갈 우리는 어떤 기획을 할 수 있을지 생각해보는 시간을 갖도록 한다. </p>
             <h5 class="text-uppercase text-left"><strong>SLIDES </strong></h5>
-            <p class="text-justify">4주차_문화예술과 소셜 미디어 사례 [<a href="https://docs.google.com/presentation/d/1T2NYIrBWtHKyMQLLS929I6QiOS3hc_z3AIH0IUESs_U/edit?usp=sharing" target="_blank">SLIDE</a>]</p>
+            <p class="text-justify">4주차_문화예술과 소셜 미디어 사례 [<a href="https://goo.gl/Ds1VaM" target="_blank">SLIDE</a>]</p>
             <h5 class="text-uppercase text-left"><strong>references</strong> </h5>
             <ul>
                 <li><a href="http://www.kyobobook.co.kr/product/detailViewKor.laf?ejkGb=KOR&amp;mallGb=KOR&amp;barcode=9788932917283&amp;orderClick=LAG&amp;Kc=" target="_blank">[Book] 소셜 미디어 2000년 파피루스에서 페이스북까지 (필독 권함)</a></li>
