--- a/2018_lectures.html
+++ b/2018_lectures.html
@@ -86,7 +86,7 @@
             <p class="text-left">톰 스탠디지는 그의 저서 &lt;Writing in the wall&gt;에서, '소셜 미디어는 새로운 현상이 아니다'라고 이야기 하다. 키케로와 로마 원로들 사이의 소통, 프로파간다 전파 등 인간의 정보 교환은 소셜미디어를 통해 일어났다고 주장한다. 즉, 미디어는 마샬 맥루언의 말처럼 그 자체로서 메시지다. (The medium is message.) 우리는 기존의 소셜미디어 또는 미디어의 역사적 흐름을 짚어보고, 국내/외
                 공공기관 및 예술단체들이 소셜 미디어를 어떤 방식으로 다루고 있으며, 앞으로 새로운 콘텐츠를 만들어 갈 우리는 어떤 기획을 할 수 있을지 생각해보는 시간을 갖도록 한다. </p>
             <h5 class="text-uppercase text-left"><strong>SLIDES </strong></h5>
-            <p class="text-justify">4주차_문화예술과 소셜 미디어 사례 [<a href="https://goo.gl/Ds1VaM" target="_blank">SLIDE</a>]</p>
+            <p class="text-justify">4주차_문화예술과 소셜 미디어 사례 [<a href="https://docs.google.com/presentation/d/1T2NYIrBWtHKyMQLLS929I6QiOS3hc_z3AIH0IUESs_U/edit?usp=sharing" target="_blank">SLIDE</a>]</p>
             <h5 class="text-uppercase text-left"><strong>references</strong> </h5>
             <ul>
                 <li><a href="http://www.kyobobook.co.kr/product/detailViewKor.laf?ejkGb=KOR&amp;mallGb=KOR&amp;barcode=9788932917283&amp;orderClick=LAG&amp;Kc=" target="_blank">[Book] 소셜 미디어 2000년 파피루스에서 페이스북까지 (필독 권함)</a></li>
@@ -109,14 +109,25 @@
             <h5 class="text-uppercase text-left"><strong>문화예술과 창작방식의 변화</strong> </h5>
             <p class="text-left">기술의 발전을 통해 사람들의 예술 향유방식이 변화한 흐름을 짚어보고 그 중에서도 메이커 문화에 대해 알아보았다. 이 과정에서 우리는 '프로페셔널과 아마추어 예술의 차이는 무엇'인지에 대한 질문을 제기할 수 있었다. 따라서 본 수업을 통해 기술의 발전으로 일반인이 적극적으로 예술참여가 가능하기 시작했던 20세기 초부터 어떻게 예술영역의 흐름이 변화해왔는지 이해해보고, 예술가는 무엇을 추구하는 이들이며, 컴퓨터 기술의 발전을 통해 새롭게 등장한 디지털 예술의 영역이 기존 예술과는 어떤 차이가 있고 앞으로 우리는 어떠한 형태의 예술을 기대해볼 수 있는지에 대해 알아보도록 한다. </p>
             <h5 class="text-uppercase text-left"><strong>SLIDES </strong></h5>
-            <p class="text-justify">문화예술과 창작방식의 변화[<a href="https://drive.google.com/open?id=1GbFCxVnKLELgIoWUrOHFHFIrLkTTC5gyYSyvQJ-B-Go" target="_blank">SLIDE</a>]</p>
+            <p class="text-justify">문화예술과 창작방식의 변화[<a href="https://docs.google.com/presentation/d/1GbFCxVnKLELgIoWUrOHFHFIrLkTTC5gyYSyvQJ-B-Go/edit?usp=sharing" target="_blank">SLIDE</a>]</p>
             <h5 class="text-uppercase text-left"><strong>references</strong> </h5>
             <ul>
 
             </ul>
             <figure></figure>
         </section>
-        
+        <section class="content">
+            <h2 class="text-uppercase text-left"><span style="text-decoration: underline;">week 6</span></h2>
+            <h5 class="text-uppercase text-left">기초 프로그래밍 1. <strong></strong> </h5>
+            <p class="text-left">기술의 발전을 통해 사람들의 예술 향유방식이 변화한 흐름을 짚어보고 그 중에서도 메이커 문화에 대해 알아보았다. 이 과정에서 우리는 '프로페셔널과 아마추어 예술의 차이는 무엇'인지에 대한 질문을 제기할 수 있었다. 따라서 본 수업을 통해 기술의 발전으로 일반인이 적극적으로 예술참여가 가능하기 시작했던 20세기 초부터 어떻게 예술영역의 흐름이 변화해왔는지 이해해보고, 예술가는 무엇을 추구하는 이들이며, 컴퓨터 기술의 발전을 통해 새롭게 등장한 디지털 예술의 영역이 기존 예술과는 어떤 차이가 있고 앞으로 우리는 어떠한 형태의 예술을 기대해볼 수 있는지에 대해 알아보도록 한다. </p>
+            <h5 class="text-uppercase text-left"><strong>SLIDES </strong></h5>
+            <p class="text-justify">문화예술과 창작방식의 변화[<a href="https://docs.google.com/presentation/d/1GbFCxVnKLELgIoWUrOHFHFIrLkTTC5gyYSyvQJ-B-Go/edit?usp=sharing" target="_blank">SLIDE</a>]</p>
+            <h5 class="text-uppercase text-left"><strong>references</strong> </h5>
+            <ul>
+
+            </ul>
+            <figure></figure>
+        </section>
                 <figure></figure>
             </section>
         </section>
