--- a/2018_lectures.html
+++ b/2018_lectures.html
@@ -166,7 +166,7 @@
             <h5 class="text-uppercase text-left">휴강 (1:1 코칭 보강 대체) <strong></strong> </h5>
             <p class="text-left"> </p>
             <h5 class="text-uppercase text-left"><strong>SLIDES </strong></h5>
-            <p class="text-justify"></a>]</p>
+            <p class="text-justify"></p>
             <h5 class="text-uppercase text-left"><strong>references</strong> </h5>
               <ul>
   
@@ -180,7 +180,7 @@
             <h5 class="text-uppercase text-left">전문가 특강 1: 김유철 (우란문화재단 PD) <strong></strong> </h5>
             <p class="text-left"> </p>
             <h5 class="text-uppercase text-left"><strong>SLIDES </strong></h5>
-            <p class="text-justify"></a>]</p>
+            <p class="text-justify"></p>
             <h5 class="text-uppercase text-left"><strong>references</strong> </h5>
               <ul>
   
@@ -194,7 +194,7 @@
             <h5 class="text-uppercase text-left">전문가 특강 2: 유후용 (NATANAM 대표) <strong></strong> </h5>
             <p class="text-left"> </p>
             <h5 class="text-uppercase text-left"><strong>SLIDES </strong></h5>
-            <p class="text-justify"></a>]</p>
+            <p class="text-justify"></p>
             <h5 class="text-uppercase text-left"><strong>references</strong> </h5>
               <ul>
   
@@ -208,7 +208,7 @@
             <h5 class="text-uppercase text-left">전문가 특강 3: 이소형 (아트센터나비 연구원) <strong></strong> </h5>
             <p class="text-left"> </p>
             <h5 class="text-uppercase text-left"><strong>SLIDES </strong></h5>
-            <p class="text-justify"></a>]</p>
+            <p class="text-justify"></p>
             <h5 class="text-uppercase text-left"><strong>references</strong> </h5>
               <ul>
   
@@ -221,7 +221,7 @@
             <h5 class="text-uppercase text-left">최종 아이디어 프리젠테이션 <strong></strong> </h5>
             <p class="text-left"> </p>
             <h5 class="text-uppercase text-left"><strong>SLIDES </strong></h5>
-            <p class="text-justify"></a>]</p>
+            <p class="text-justify"></p>
             <h5 class="text-uppercase text-left"><strong>references</strong> </h5>
               <ul>
   
@@ -234,7 +234,7 @@
             <h5 class="text-uppercase text-left">현충일 휴강 (1:1 코칭 보강 대체) <strong></strong> </h5>
             <p class="text-left"> </p>
             <h5 class="text-uppercase text-left"><strong>SLIDES </strong></h5>
-            <p class="text-justify"></a>]</p>
+            <p class="text-justify"></p>
             <h5 class="text-uppercase text-left"><strong>references</strong> </h5>
               <ul>
   
@@ -247,7 +247,7 @@
             <h5 class="text-uppercase text-left">지방선거 휴강 (1:1 코칭 보강 대체) <strong></strong> </h5>
             <p class="text-left"> </p>
             <h5 class="text-uppercase text-left"><strong>SLIDES </strong></h5>
-            <p class="text-justify"></a>]</p>
+            <p class="text-justify"></p>
             <h5 class="text-uppercase text-left"><strong>references</strong> </h5>
               <ul>
   
@@ -260,7 +260,7 @@
             <h5 class="text-uppercase text-left">1:1 코칭 보강 대체 및 최종 과제 제출 <strong></strong> </h5>
             <p class="text-left"> </p>
             <h5 class="text-uppercase text-left"><strong>SLIDES </strong></h5>
-            <p class="text-justify"></a>]</p>
+            <p class="text-justify"></p>
             <h5 class="text-uppercase text-left"><strong>references</strong> </h5>
               <ul>
   
